kubernetes/apps/longhorn-system/networkpolicies/networkpolicy-admission-webhook.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-longhorn-admission-webhook
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-manager
  ingress:
    - toPorts:
        - ports:
            - port: "9502"
              protocol: TCP
