kubernetes/apps/longhorn-system/networkpolicies/networkpolicy-backupstore.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-longhorn-backupstore
  namespace: longhorn-system
spec:
  endpointSelector: {}
  egress:
    - toCIDRSet:
        - cidr: 192.168.0.151/32
