kubernetes/apps/longhorn-system/networkpolicies/networkpolicy-conversion-webhook.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-longhorn-conversion-webhook
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-manager
  ingress:
    - toPorts:
        - ports:
            - port: "9501"
              protocol: TCP
