kubernetes/apps/longhorn-system/networkpolicies/networkpolicy-recovery-backend.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-longhorn-recovery-backend
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-manager
  ingress:
    - toPorts:
        - ports:
            - port: "9503"
              protocol: TCP
